@@ -53,6 +53,14 @@
 </tr>
 </table>
 <p>
+2003-06-23  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/bmp.c (ReadBMPImage): Only validate the file size value
+        for compressed BMPs.
+
+</UL>
+<p>
 2003-06-10  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
