@@ -1,3 +1,8 @@
+2003-06-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/bmp.c (ReadBMPImage): Only validate the file size value
+	for compressed BMPs.
+
 2003-06-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* version.sh: Update to unreleased 1.0.3 so that development
